Minigames: add scoreboard end card